# 3DGraphicsApp

./: CMakeLists.txt  IndividualFunctionality.md  TodoList.md  main.cpp
assets/: _CREDITS.txt  pine-tree.glb  rubber-ducky.3ds  sports-car.glb
src/: camera.h  light.h  main.cpp  model_initializer.h  shader.h
src/models/: object_base.cpp  object_base.h  object_opengl_model.cpp  object_opengl_model.h
src/models/objects/: floor.h  mirror_surface.h  pine_tree.h  rubber_ducky.h  sphere.h  sports_car.h
src/objects/: floor.h  model_initializer.h  object_base.cpp  object_base.h  object_opengl_model.cpp  object_opengl_model.h
src/objects/rubber_ducky/: rubber_ducky.cpp  rubber_ducky.frag  rubber_ducky.h
src/objects/sphere/: sphere.cpp  sphere.h  sphere.vert
src/objects/sports_car/: sports_car.cpp  sports_car.h  sports_car.vert
src/shaders/: file_helper.h  shader.cpp  shader.frag  shader.h  shader.vert
src/shaders/fragment/: example.frag
src/shaders/vertex/: example.vert
